# artemis-model

./: .gitignore  PLAN.md  README.md  main.py  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
config/: bmp_rules.yaml  data_paths.yaml  extent.geojson  projection.yaml  tpo_targets.yaml
data/: copy_to_windows.sh
gee/: README.md
notebooks/: Clearcut-Grassland-Feature-Engineering.ipynb  Clearcut-vs-Agriculture-EVT-Change.ipynb  Clearcut-vs-Agriculture-Embeddings.ipynb  Embedding-Similarity-AOI-Finder.ipynb  FVS_5county_growth_smoke.ipynb.old  Interactive-Clearcut-Similarity.ipynb  README.md  Similarity-Embeddings.ipynb  Spatiotemporal-Similarity-Embeddings.ipynb  TreeMap_COG_County_Summary.ipynb  clearcut_ag_common.py
notes/: README.md  clearcut-vs-agriculture-embeddings.md  duckdb-iterative-coupling-cells.md  fvs-5county-growth-smoke.md  fvs-smoke-rerun-plan.md  fvs-to-raster-painting.md  management-pipeline-plan.md  management_units.md  notebooks.md  restart-fidelity-findings.md  terminology.md  treemap-cog-county-summary.md  treemap-fvs-workflow.md  treemap-methodology.md
pipeline/: README.md  __init__.py
r/: 01_subset_TreeMap_5county.R  02_subset_FIA_SQLite_multistateR.R  03_build_FVS_input_db.R  04_tag_FVS_groups_multistate.R  05_consolidate_FIA_SQLite.R  06_build_TreeMap_FVS_linkage.R  07_FL_FIA_TreeMap_comparison.R
scripts/: Create_FVS_Database.txt  Join_FVS_output_to_arc.txt  LETO.V1.1.txt  LETO_CSV_PIPELINE.txt  README.txt  check-staged-large-files.sh
tests/: conftest.py  test_clearcut_ag_common.py  test_clearcut_ag_outputs.py  test_config.py  test_cut_injection.py  test_restart_fidelity.py  test_s1_treemap_clip.py  test_s3_assign_plt_cn.py  test_s3_harvest_scheduler.py  test_s3_sketch_management_units.py  test_s3_sliver_merge.py  test_s3_tpo_targets.py  test_s4_build_fvs_inputs.py  test_s4_paint_fvs_to_raster.py  test_s4_regime_templates.py
(+66 files in other folders)
