[project]
name = "eastern-us-forest-projection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "earthengine-api>=1.7.26",
    "folium>=0.12",
    "geemap>=0.37.3",
    "geopandas>=1.1.3",
    "ipyleaflet>=0.20.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyterlab-widgets>=3.0.16",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "pyogrio>=0.12.1",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "rasterio>=1.5.0",
    "scikit-image>=0.26.0",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
]
