[project]
name = "eastern-us-forest-projection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.5.4",
    "earthengine-api>=1.7.26",
    "folium>=0.12",
    "geemap>=0.37.3",
    "geopandas>=1.1.3",
    "ipyleaflet>=0.20.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyterlab-widgets>=3.0.16",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.9",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pyogrio>=0.12.1",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "rasterio>=1.5.0",
    "scikit-image>=0.26.0",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]

[tool.ruff]
target-version = "py314"
# Notebook cells legitimately import mid-file and use semicolons (E402/E702);
# linting them reports ~20 errors that are normal notebook style, not defects.
extend-exclude = ["notebooks", "data", ".jupyter-runtime"]

# Rules are ruff's defaults (E4/E7/E9 + F): correctness and unused code, no
# style opinions. Deliberately not enabling isort/formatting rules, which would
# churn the whole repo without catching bugs.
